# FlowEngineforMinds-WorldAutomata

./: README.md  intro_en.html  main.py  pyproject.toml  requirements.txt  setup.py  开发者文档FemWA  文档FemWA
femBridges/: ContextExample.py  MemoryExample.py  llmBridge.py  mimo.p1y1
femBridges/getDir/: FEMain_dir.txt  get_dir.py  你可以设定任意文件夹为用户数据文件夹.txt
femCompiler/: FEM_config.py  FEM_parser.py  FEM_runtime.py  FEM_shared_utils.py  db_utils.py
func_code/: wait.py
